--- a/src/presentacion/RetirarSaldo.form
+++ b/src/presentacion/RetirarSaldo.form
@@ -204,6 +204,9 @@
                   <Color blue="35" green="35" red="7e" type="rgb"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtSaldoRetiradoKeyTyped"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnRetirar">
               <Properties>
