--- a/src/presentacion/TransferirDinero.form
+++ b/src/presentacion/TransferirDinero.form
@@ -212,6 +212,7 @@
               </Properties>
               <Events>
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="txtSaldoTransferidoMouseClicked"/>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtSaldoTransferidoKeyTyped"/>
               </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnTransferir">
